# USBPcapGUI

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md  vcpkg.json  version.json
cli/: CMakeLists.txt
cli/src/: main.cpp
core/: CMakeLists.txt
core/include/: capture_config_parser.h  capture_engine.h  device_enumerator.h  driver_manager.h  export_engine.h  filter_engine.h  ipc_server.h  parser_interface.h  pcap_parser.h  trigger_engine.h  usb_actions.h  usbpcap_reader.h
core/src/: capture_config_parser.cpp  capture_engine.cpp  device_enumerator.cpp  driver_manager.cpp  export_engine.cpp  filter_engine.cpp  ipc_server.cpp  main.cpp  pcap_parser.cpp  trigger_engine.cpp  usb_actions.cpp  usbpcap_reader.cpp
core/src/parsers/: ata_parser.cpp  nvme_parser.cpp  parser_interface.cpp  scsi_parser.cpp  serial_parser.cpp  usb_parser.cpp
docs/: DESIGN.md  USB抓包前设置界面窗口实现的提示词.md  USB抓包实时界面显示实现的提示词.md
driver/: README.md  bhplus.inf
driver/include/: bhplus_common.h
driver/src/: driver.c
gui/: core-bridge.js  logger.js  package-lock.json  package.json  server.js
gui/public/: index.html  setup.html
gui/public/css/: setup.css  style.css
gui/public/js/: app.js  capture.js  devicetree.js  filter-presets.js  filter.js  hexview.js  interface-options.js  websocket.js
launcher/: CMakeLists.txt
launcher/src/: main.cpp
resources/: app.rc
scripts/: package.ps1
sdk/: CMakeLists.txt
sdk/include/: bhplus_sdk.h
sdk/src/: bhplus_sdk.cpp
shared/: CMakeLists.txt
shared/include/: bhplus_ioctl.h  bhplus_protocol.h  bhplus_types.h  log_init.h
tests/: CMakeLists.txt
tests/core_tests/: test_capture_config.cpp  test_core_utils.cpp  test_parsers.cpp  test_usb_actions.cpp
